Added ManageUsers and Create New USer functionality and added Admin UI for MigrateData into JSON and back (LiteDB is JSON based DB) Test it, found bugs report it to this repository.

--- a/SecureVaultForTeams.csproj
+++ b/SecureVaultForTeams.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\EditEntry.cshtml">
+      <DependentUpon>MigrateData.cshtml.cs</DependentUpon>
+    </Content>
+  </ItemGroup>
+
 </Project>
